[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-utils-jokerssd"
version = "0.4.0"
description = "Development utilities with structured logging"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Jokerssd", email = "jokerssd@example.com"},
]
dependencies = [
    "structlog>=25.5.0",
    "requests",
    "aiohttp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["dev_utils"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
